Fix menu z-index bug

--- a/app/assets/stylesheets/components/_menus.scss
+++ b/app/assets/stylesheets/components/_menus.scss
@@ -1,6 +1,7 @@
 .menu__toggle {
   cursor: pointer;
   position: relative;
+  z-index: 2;
 
   &[aria-expanded='true'] {
     outline: none;
